# llm_cache

./: .gitignore  main.py  pyproject.toml
.codex/skills/project-quality-checks/: SKILL.md
Demos/: monolit_run.py
Embedding/: __init__.py  ollama_embedder.py
LLM/: __init__.py  groq_llm_provider.py  i_llm_provider.py  llm.proto
Orchestrator/: CacheOrchestrator.py  __init__.py  orchestrator.proto
TestDoubles/: vector_store_hit_stub.py  vector_store_miss_stub.py
VectorStore/: __init__.py  vector_store.proto  vector_store_empty_mock.py
docs/: CONFIGURATION_CHANGE_GUIDE.md
src/llm_cache/: __init__.py
src/llm_cache/config/: __init__.py  app_config.py  cli_args.py  embedding_server_cli_args.py  llm_server_cli_args.py  provider_options.py  vector_store_server_cli_args.py
src/llm_cache/demos/: __init__.py  grpc_embedding_orchestrator_demo.py  grpc_llm_orchestrator_demo.py  grpc_providers_orchestrator_demo.py  grpc_vector_store_orchestrator_demo.py  monolit_run.py
src/llm_cache/embedding/: __init__.py  embedding.proto  embedding_grpc_client.py  embedding_grpc_service.py  embedding_pb2.py  embedding_pb2.pyi  embedding_pb2_grpc.py  embedding_server.py  i_embedder.py  ollama_embedder.py
src/llm_cache/factories/: __init__.py  embedding_factory.py  eviction_policy_factory.py  llm_factory.py  vector_store_factory.py
src/llm_cache/health/: __init__.py  health_check_result.py  health_checkable.py  health_report.py  health_runner.py  setup_check_cli.py
src/llm_cache/llm/: __init__.py  groq_llm_provider.py  llm_grpc_client.py  llm_grpc_service.py  llm_pb2.py  llm_pb2.pyi  llm_pb2_grpc.py  llm_server.py  (+1 more)
tests/: test_cli_args.py  test_demos.py  test_embedding_server_cli_args.py  test_factories.py  test_health.py  test_llm_server_cli_args.py  test_main_wiring.py  test_provider_health_checks.py  test_vector_store_server_cli_args.py
tests/embedding/: test_embedding_grpc_client_server.py  test_embedding_grpc_orchestrator_integration.py  test_embedding_server.py
tests/llm/: test_llm_grpc_client_server.py  test_llm_grpc_orchestrator_integration.py  test_llm_server.py
tests/orchestrator/: test_cache_orchestrator.py
tests/vector_store/: test_chroma_vector_store.py  test_in_memory_vector_store.py  test_lru_eviction_policy.py  test_vector_store_grpc_client_server.py  test_vector_store_grpc_server.py  test_vector_store_grpc_service.py
(+22 files in other folders)
