[project]
name = "llm-cache"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.9",
    "groq>=1.4.0",
    "grpcio>=1.81.1",
    "grpcio-tools>=1.81.1",
    "ollama>=0.6.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "src/llm_cache/**/*_pb2.py",
    "src/llm_cache/**/*_pb2.pyi",
    "src/llm_cache/**/*_pb2_grpc.py",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"src/llm_cache/**/*_pb2.py" = ["E501", "F401", "I001", "UP009"]
"src/llm_cache/**/*_pb2.pyi" = ["I001", "UP045"]
"src/llm_cache/**/*_pb2_grpc.py" = ["E501", "F401", "I001", "UP009"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.15",
]
